--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Portafolio de Vicente Rosales Venegas, Licenciado en Lingüística y Literatura Inglesa y estudiante de Desarrollo de Aplicaciones Full Stack JavaScript.">
   </head>
   <body>
-   <!-- Comienzo Hero -->
+    <!-- Comienzo Hero -->
     <section id="hero">
       <div class="container-fluid col-xxl-auto text-white">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
@@ -23,12 +23,12 @@
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">Vicente Rosales V.</h1>
-            <p class="lead">Licenciado en Lingüística y Literatura Inglesa en la Universidad de Chile. <br> Estudiante de Desarrollo de Aplicaciones Full Stack JavaScript. <br>
-            Entusiasta de la musica, los videojuegos, los libros y las peliculas.</p>
-            <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-light btn-lg text-success px-4 me-md-2">Primary</button>
-              <button type="button" class="btn btn-outline-light btn-lg px-4">Default</button>
-            </div> -->
+            <p class="lead">Hola, soy Vicente!, Licenciado en Lingüística y Literatura Inglesa en la Universidad de Chile. Actualmente estudiante de Desarrollo de Aplicaciones Full Stack JavaScript. <br>
+            Soy entusiasta de la música, los videojuegos, los libros y las películas.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <button type="button" class="btn btn-outline-light btn-lg text-light px-4 me-md-2" id="contact-btn">Contacto</button>
+              <!-- <button type="button" class="btn btn-outline-light btn-lg px-4">Default</button> -->
+            </div>
           </div>
         </div>
       </div>
@@ -36,41 +36,41 @@
     <!-- Cierre Hero -->
     <!-- Comienzo Curriculum -->
     <section id="curriculum">
-        <div class="container-fluid text-white">
+        <div class="container-fluid text-white" id="laboral">
           <h2>Antecedentes Laborales</h2>
-          <div class="card .bg-success-subtle mb-3">
+          <div class="card bg-success-subtle mb-3">
             <div class="card-body">
               <h5 class="card-title">Intérprete inglés - español</h5>
-              <p class="card-text">Abril 2023 – Agosto 2023</p>
-              <p class="card-text"><small class="text-muted">Teleperformance, Santiago</small></p>
+              <p class="card-text">Teleperformance, Santiago</p>
+              <p class="card-text"><small class="text-muted">Abril 2023 – Agosto 2023</small></p>
             </div>
           </div>
-          <div class="card .bg-success-subtle mb-3">
+          <div class="card bg-success-subtle mb-3">
             <div class="card-body">
               <h5 class="card-title">Operador de Andariveles</h5>
-              <p class="card-text">Septiembre 2023</p>
-              <p class="card-text"><small class="text-muted">Centro de Montaña El Colorado, Farellones</small></p>
+              <p class="card-text">Centro de Montaña El Colorado, Farellones</p>
+              <p class="card-text"><small class="text-muted">Septiembre 2023</small></p>
             </div>
           </div>
         </div>
         <div class="container-fluid text-white">
-          <h2>Antecedentes Academicos</h2>
-          <div class="card .bg-success-subtle mb-3">
+          <h2>Antecedentes Académicos</h2>
+          <div class="card bg-success-subtle mb-3">
             <div class="card-body">
               <h5 class="card-title">Enseñanza Básica</h5>
-              <p class="card-text"><small class="text-muted">Completa</small></p>
               <p class="card-text">Colegio Regina Pacis (2005-2010) <br>
                 Colegio Eduardo Frei Montalva (2011-2013) </p>
+                <p class="card-text"><small class="text-muted">Completa</small></p>
             </div>
           </div>
-          <div class="card .bg-success-subtle mb-3">
+          <div class="card bg-success-subtle mb-3">
             <div class="card-body">
               <h5 class="card-title">Enseñanza Media</h5>
-              <p class="card-text"><small class="text-muted">Completa</small></p>
               <p class="card-text">Colegio Alicante del Valle (2014-2017)</p>
+              <p class="card-text"><small class="text-muted">Completa</small></p>
             </div>
           </div>
-          <div class="card .bg-success-subtle mb-3">
+          <div class="card bg-success-subtle mb-3">
             <div class="card-body">
               <h5 class="card-title">Licenciado en Lingüística y Literatura Inglesa</h5>
               <p class="card-text">Universidad de Chile (2019-2022)</p>
@@ -78,36 +78,37 @@
           </div>
         </div>
       </section>
+      <!-- Cierre Curriculum -->
+    <!-- Comienzo Formulario de Contacto -->
     <section>
-      <div class="container-fluid text-white" id="form">
+      <div class="container-fluid text-white" id="formtxt">
         <div>
           <h2>Formulario de Contacto</h2>
-          <p>Si desea contactarse conmigo, puede hacerlo a través de este formulario o escribiendome por Linkedin.</p>
+          <p>Si desea contactarse conmigo, puede hacerlo a través de este formulario o escribiéndome por Linkedin.</p>
         </div>
         <form id="form">
           <div>
-            <label for="name" class="form-label">Nombre</label>
+            <label for="name" class="form-label"></label>
             <input type="text" class="form-control" id="name" placeholder="Nombre">
           </div>
           <div>
-            <label for="mail" class="form-label">Correo Electrónico</label>
+            <label for="mail" class="form-label"></label>
             <input type="email" class="form-control" id="mail" placeholder="Correo Electrónico">
           </div>
           <div>
-            <label for="cajamensaje" class="form-label">Mensaje</label>
+            <label for="cajamensaje" class="form-label"></label>
             <textarea class="form-control" id="cajamensaje" rows="3" placeholder="Escriba su mensaje aquí"></textarea>
           </div>
           <button type="submit" class="btn btn-outline-light" id="submit">Enviar</button>
         </form>
       </div>
     </section>
+    <!-- Cierre Formulario de Contacto -->
+    <!-- Comienzo Footer -->
     <section id="footer">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
         <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="text-white text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-          </a>
-          <span class="text-white">From Russia with Love    2024</span>
+          <span class="text-white">2024. From Russia with Love &#128157;</span>
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3">
@@ -115,9 +116,15 @@
               <i class="bi bi-linkedin"></i>
             </a>
           </li>
+          <li class="ms-3">
+          <a class="text-white" href="https://github.com/TheInF3rNuS">
+            <i class="bi bi-github"></i>
+          </a>
+          </li>
         </ul>
       </footer>
     </section>
+    <!-- Cierre Footer -->
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
