--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container-fluid col-xxl-auto text-white">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="assets/img/VichoAvatarTransparente.PNG" class="d-block mx-lg-auto img-fluid" alt="Vicente Dibujado" width="400" height="200" loading="lazy">
+            <img id="profile-img" src="assets/img/VichoAvatarTransparente.PNG" class="d-block mx-lg-auto img-fluid" alt="Vicente Dibujado" width="400" height="200" loading="lazy">
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">Vicente Rosales V.</h1>
