--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Portafolio Vicente Rosales Venegas</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/ability_seal.jpg">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Portafolio de Vicente Rosales Venegas, Licenciado en Lingüística y Literatura Inglesa y estudiante de Desarrollo de Aplicaciones Full Stack JavaScript.">
+    <link rel="icon" type="image/x-icon" href="assets/img/ability_seal.jpg"/>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"/>
+    <meta name="description" content="Portafolio de Vicente Rosales Venegas, Licenciado en Lingüística y Literatura Inglesa y estudiante de Desarrollo de Aplicaciones Full Stack JavaScript."/>
   </head>
   <body>
     <!-- Comienzo Hero -->
@@ -19,12 +19,14 @@
       <div class="container-fluid col-xxl-auto text-white">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img id="profile-img" src="assets/img/VichoAvatarTransparente.PNG" class="d-block mx-lg-auto img-fluid" alt="Vicente Dibujado" width="400" height="200" loading="lazy">
+            <img id="profile-img" src="assets/img/VichoAvatarTransparente.PNG" class="d-block mx-lg-auto img-fluid" alt="Vicente Dibujado" width="400" height="200" loading="lazy"/>
+            <p id="bang-text" style="color: red; display: none">Bang!</p>
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">Vicente Rosales V.</h1>
-            <p class="lead">Hola, soy Vicente!, Licenciado en Lingüística y Literatura Inglesa en la Universidad de Chile. Actualmente estudiante de Desarrollo de Aplicaciones Full Stack JavaScript. <br>
-            Soy entusiasta de la música, los videojuegos, los libros y las películas.</p>
+            <p class="lead"> Hola, soy Vicente!, Licenciado en Lingüística y Literatura Inglesa en la Universidad de Chile. 
+              Actualmente estudiante de Desarrollo de Aplicaciones Full Stack JavaScript. <br>
+              Soy entusiasta de la música, los videojuegos, los libros y las películas.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <button type="button" class="btn btn-outline-light btn-lg text-light px-4 me-md-2" id="contact-btn">Contacto</button>
               <!-- <button type="button" class="btn btn-outline-light btn-lg px-4">Default</button> -->
@@ -36,49 +38,92 @@
     <!-- Cierre Hero -->
     <!-- Comienzo Curriculum -->
     <section id="curriculum">
-        <div class="container-fluid text-white" id="laboral">
-          <h2>Antecedentes Laborales</h2>
-          <div class="card bg-success-subtle mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Intérprete inglés - español</h5>
-              <p class="card-text">Teleperformance, Santiago</p>
-              <p class="card-text"><small class="text-muted">Abril 2023 – Agosto 2023</small></p>
+      <div class="container-fluid text-white" id="laboral">
+        <h2>Antecedentes Laborales</h2>
+        <div class="card bg-success-subtle mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Intérprete inglés - español</h5>
+            <p class="card-text">Teleperformance, Santiago</p>
+            <p class="card-text">
+              <small class="text-muted">Abril 2023 – Agosto 2023</small>
+            </p>
+          </div>
+        </div>
+        <div class="card bg-success-subtle mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Operador de Andariveles</h5>
+            <p class="card-text">Centro de Montaña El Colorado, Farellones</p>
+            <p class="card-text">
+              <small class="text-muted">Septiembre 2023</small>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid text-white">
+        <h2>Antecedentes Académicos</h2>
+        <div class="card bg-success-subtle mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Enseñanza Básica</h5>
+            <p class="card-text">
+              Colegio Regina Pacis (2005-2010) <br />
+              Colegio Eduardo Frei Montalva (2011-2013)
+            </p>
+            <p class="card-text"><small class="text-muted">Completa</small></p>
+          </div>
+        </div>
+        <div class="card bg-success-subtle mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Enseñanza Media</h5>
+            <p class="card-text">Colegio Alicante del Valle (2014-2017)</p>
+            <p class="card-text"><small class="text-muted">Completa</small></p>
+          </div>
+        </div>
+        <div class="card bg-success-subtle mb-3">
+          <div class="card-body">
+            <h5 class="card-title">
+              Licenciado en Lingüística y Literatura Inglesa
+            </h5>
+            <p class="card-text">Universidad de Chile (2019-2022)</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Cierre Curriculum -->
+    <!-- Comienzo Habilidades -->
+    <section id="habilidades">
+      <div class="container-fluid text-white">
+        <h2>Mis Habilidades</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card bg-success-subtle mb-3">
+              <div class="card-body">
+                <h5 class="card-title">Desarrollo Web y Computación</h5>
+                <p class="card-text">HTML, CSS y JavaScript. <br> Tengo conocimientos de computación nivel avanzado en Windows y sé armar una computadora desde cero. 
+                  También poseo conocimientos basicos de uso de Linux (Ubuntu y Linux Mint, entre otras distribuciones) y de MacOS.</p>
+              </div>
             </div>
           </div>
-          <div class="card bg-success-subtle mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Operador de Andariveles</h5>
-              <p class="card-text">Centro de Montaña El Colorado, Farellones</p>
-              <p class="card-text"><small class="text-muted">Septiembre 2023</small></p>
+          <div class="col-md-4">
+            <div class="card bg-success-subtle mb-3">
+              <div class="card-body">
+                <h5 class="card-title">Idiomas</h5>
+                <p class="card-text">Español (Nativo), Inglés (Avanzado, C1)</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-success-subtle mb-3">
+              <div class="card-body">
+                <h5 class="card-title">Otras Habilidades y Cursos</h5>
+                <p class="card-text"> Toco Piano y guitarra, tengo experiencia en atención y soporte al cliente, me gusta trabajar en equipo. 
+                  Tomé un curso de inglés en el Instituto Chileno-Britanico (Hasta nivel C1) y también tomé un curso de formación general de Teatro impartido en la Universidad de Chile.</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="container-fluid text-white">
-          <h2>Antecedentes Académicos</h2>
-          <div class="card bg-success-subtle mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Enseñanza Básica</h5>
-              <p class="card-text">Colegio Regina Pacis (2005-2010) <br>
-                Colegio Eduardo Frei Montalva (2011-2013) </p>
-                <p class="card-text"><small class="text-muted">Completa</small></p>
-            </div>
-          </div>
-          <div class="card bg-success-subtle mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Enseñanza Media</h5>
-              <p class="card-text">Colegio Alicante del Valle (2014-2017)</p>
-              <p class="card-text"><small class="text-muted">Completa</small></p>
-            </div>
-          </div>
-          <div class="card bg-success-subtle mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Licenciado en Lingüística y Literatura Inglesa</h5>
-              <p class="card-text">Universidad de Chile (2019-2022)</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Cierre Curriculum -->
+      </div>
+    </section>
+    <!-- Cierre Habilidades -->
     <!-- Comienzo Formulario de Contacto -->
     <section>
       <div class="container-fluid text-white" id="formtxt">
@@ -89,11 +134,11 @@
         <form id="form">
           <div>
             <label for="name" class="form-label"></label>
-            <input type="text" class="form-control" id="name" placeholder="Nombre">
+            <input type="text" class="form-control" id="name" placeholder="Nombre"/>
           </div>
           <div>
             <label for="mail" class="form-label"></label>
-            <input type="email" class="form-control" id="mail" placeholder="Correo Electrónico">
+            <input type="email" class="form-control" id="mail" placeholder="Correo Electrónico"/>
           </div>
           <div>
             <label for="cajamensaje" class="form-label"></label>
@@ -106,20 +151,25 @@
     <!-- Cierre Formulario de Contacto -->
     <!-- Comienzo Footer -->
     <section id="footer">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3"
+      >
         <div class="col-md-4 d-flex align-items-center">
           <span class="text-white">2024. From Russia with Love &#128157;</span>
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3">
-            <a class="text-white" href="https://www.linkedin.com/in/vicente-rosales-venegas-684a40176/">
+            <a
+              class="text-white"
+              href="https://www.linkedin.com/in/vicente-rosales-venegas-684a40176/"
+            >
               <i class="bi bi-linkedin"></i>
             </a>
           </li>
           <li class="ms-3">
-          <a class="text-white" href="https://github.com/TheInF3rNuS">
-            <i class="bi bi-github"></i>
-          </a>
+            <a class="text-white" href="https://github.com/TheInF3rNuS">
+              <i class="bi bi-github"></i>
+            </a>
           </li>
         </ul>
       </footer>
